Material da Aula + atividade

--- a/2023/ARA0066 PARADIGMAS DE LINGUAGENS DE PROGRAMAÇÃO EM PYTHON/Material/Aprendizado Python - Suzano/Untitled15.ipynb
+++ b/2023/ARA0066 PARADIGMAS DE LINGUAGENS DE PROGRAMAÇÃO EM PYTHON/Material/Aprendizado Python - Suzano/Untitled15.ipynb
@@ -12,10 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f1caa806",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'r' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m url \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mhttps://api.covid19api.com/dayone/country/brazil\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> 2\u001b[0m resp \u001b[39m=\u001b[39m r\u001b[39m.\u001b[39mget(url)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'r' is not defined"
+     ]
+    }
+   ],
    "source": [
     "url = 'https://api.covid19api.com/dayone/country/brazil'\n",
     "resp = r.get(url)"
@@ -23,19 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e266544d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'resp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m resp\u001b[39m.\u001b[39mstatus_code\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'resp' is not defined"
+     ]
     }
    ],
    "source": [
@@ -87,10 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "a1004ad6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'raw_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m final_data \u001b[39m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfor\u001b[39;00m obs \u001b[39min\u001b[39;00m raw_data:\n\u001b[1;32m      3\u001b[0m     final_data\u001b[39m.\u001b[39mappend([obs[\u001b[39m'\u001b[39m\u001b[39mConfirmed\u001b[39m\u001b[39m'\u001b[39m], obs[\u001b[39m'\u001b[39m\u001b[39mDeaths\u001b[39m\u001b[39m'\u001b[39m], obs[\u001b[39m'\u001b[39m\u001b[39mRecovered\u001b[39m\u001b[39m'\u001b[39m], obs[\u001b[39m'\u001b[39m\u001b[39mActive\u001b[39m\u001b[39m'\u001b[39m], obs[\u001b[39m'\u001b[39m\u001b[39mDate\u001b[39m\u001b[39m'\u001b[39m]])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'raw_data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "final_data = []\n",
     "for obs in raw_data:\n",
