--- a/2023/ARA0066 PARADIGMAS DE LINGUAGENS DE PROGRAMAÇÃO EM PYTHON/Material/Aprendizado Python - Suzano/Untitled2.ipynb
+++ b/2023/ARA0066 PARADIGMAS DE LINGUAGENS DE PROGRAMAÇÃO EM PYTHON/Material/Aprendizado Python - Suzano/Untitled2.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8282e0f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pague a corrida\n"
+     ]
+    }
+   ],
    "source": [
     "valor_passagem = 4.30\n",
     "valor_corrida = input('Qual é o valor da corrida?')\n",
@@ -76,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
